Implement data URI support for find image on screen.